For example in cell A1 : =cos(12)
=>call kspread_dlg_formula => =cos(12)+
cell A1 : 10
=>call : =10+

2000-08-11-Montel laurent <montell@club-internet.fr>
----------------------------------------------------
Bug Fix :
Now when you dissociate cells, extrawidth=0
extraheight=0.

2000-08-13-Montel laurent <montell@club-internet.fr>
----------------------------------------------------
Bug fix :
selected an area and press Enter, so you moved
into this area
=>now it reworks

2000-08-14-Montel laurent <montell@club-internet.fr>
----------------------------------------------------
* Redraw problem when selecting cells with a border
* F2 switches from cell to edit-widget
* Layout fixes
* Fixes for undo/redo
* Fixes for copy and paste of cells with extra width

2000-08-18-Montel laurent <montell@club-internet.fr>
----------------------------------------------------
* Appearance fix when clicking a single cell: doesn't
  look like a selection in the row/column headers anymore.
* Allow to change the number format for an empty cell.
* Pressing Enter in the edit widget without changing the
  value doesn't clear the cell anymore.

2000-08-18-Montel laurent <montell@club-internet.fr>
----------------------------------------------------
* Implemented Undo/Redo on column/row resizing
* Implemented Undo/Redo on clear cell
* Another fix for merged cells (conditionnal formatting).

2000-08-19-Montel laurent <montell@club-internet.fr>
----------------------------------------------------
* Implemented Undo for merging cells
* Fixed repainting problem when unmerging
* Fixed undo on clear cell

Summary 2000-08-19 -> 2000-08-22
Montel laurent <montell@club-internet.fr>
-----------------------------------------
* Implemented Undo For "Find and Replace"
* Implemented Undo For "Insert->series"
* Bug fix in kspread_dlg_series
* Undo works when I clear and used "find and replace" on entire row/col
* Undo works again when I changed table name